refactor: add if else
